<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_light_gray2">


    <Button
        android:id="@+id/btn_data_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/debug_text_data_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_data_page_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/debug_text_data_page_desc"
        android:textColor="@color/debug_white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_data_page" />

    <Button
        android:id="@+id/btn_widget_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/debug_text_widget_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_page_desc" />

    <TextView
        android:id="@+id/tv_widget_page_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/debug_text_widget_page_desc"
        android:textColor="@color/debug_white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_widget_page" />

    <Button
        android:id="@+id/btn_operate_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/debug_text_operate_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_widget_page_desc" />

    <TextView
        android:id="@+id/tv_operate_page_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/debug_text_operate_page_desc"
        android:textColor="@color/debug_white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_operate_page" />


</androidx.constraintlayout.widget.ConstraintLayout>