<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_enter_mission"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/debug_dimen_dp_24"
                android:layout_marginTop="@dimen/debug_dimen_dp_24"
                android:gravity="center"
                android:text="@string/enter_mission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_start_mission"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/debug_dimen_dp_24"
                android:layout_marginTop="@dimen/debug_dimen_dp_24"
                android:gravity="center"
                android:text="@string/start_mission"
                app:layout_constraintStart_toEndOf="@+id/btn_enter_mission"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_pause_mission"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/debug_dimen_dp_24"
                android:layout_marginTop="@dimen/debug_dimen_dp_24"
                android:gravity="center"
                android:text="@string/pause_mission"
                app:layout_constraintStart_toEndOf="@+id/btn_start_mission"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_resume_mission"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/debug_dimen_dp_24"
                android:layout_marginTop="@dimen/debug_dimen_dp_24"
                android:gravity="center"
                android:text="@string/resume_mission"
                app:layout_constraintStart_toEndOf="@+id/btn_pause_mission"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_exit_mission"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/debug_dimen_dp_24"
                android:layout_marginTop="@dimen/debug_dimen_dp_24"
                android:gravity="center"
                android:text="@string/exit_mission"
                app:layout_constraintStart_toEndOf="@+id/btn_resume_mission"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_result_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/debug_color_4f"
                android:paddingStart="@dimen/debug_dimen_dp_24"
                android:paddingTop="@dimen/debug_dimen_dp_12"
                android:paddingEnd="@dimen/debug_dimen_dp_24"
                android:paddingBottom="@dimen/debug_dimen_dp_12"
                android:text="@string/debug_result_code"
                app:layout_constraintTop_toBottomOf="@+id/btn_enter_mission" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/debug_color_4f"
                android:paddingStart="@dimen/debug_dimen_dp_24"
                android:paddingTop="@dimen/debug_dimen_dp_12"
                android:paddingEnd="@dimen/debug_dimen_dp_24"
                android:paddingBottom="@dimen/debug_dimen_dp_12"
                tools:text="result"
                app:layout_constraintTop_toBottomOf="@+id/tv_result_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>