<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_gray">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/debug_dimen_dp_15"
        android:layout_marginTop="@dimen/debug_dimen_dp_15"
        android:entries="@array/debug_device_log_type"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/queryLogList"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/debug_device_log_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logDownLoad"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/debug_device_log_downLoad"
        app:layout_constraintStart_toEndOf="@id/queryLogList"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logDownLoad2"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/debug_device_log_downLoad"
        app:layout_constraintStart_toEndOf="@id/logDownLoad"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/debug_login_box_cancel"
        app:layout_constraintStart_toEndOf="@id/logDownLoad2"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/realTime"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/debug_device_log_real_time"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/debug_dimen_dp_15"
        android:layout_marginTop="@dimen/debug_dimen_dp_15"
        android:background="@drawable/debug_sdk_bg_stroke_common"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="@color/debug_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queryLogList" />

    <Button
        android:id="@+id/btn_clearlog"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:background="@drawable/debug_btn_bg_stroke_common_with_color"
        android:text="@string/debug_clear_all"
        android:textAllCaps="false"
        android:textColor="@color/debug_white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="@id/tv_result" />
</androidx.constraintlayout.widget.ConstraintLayout>