<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_light_gray2">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/debug_send_data_to_payload_demo"
        android:textColor="@color/debug_color_white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/debug_send_data_tips"
        android:textColorHint="@color/debug_white_half"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/debug_send"
        app:layout_constraintStart_toStartOf="@+id/et_input"
        app:layout_constraintTop_toBottomOf="@+id/et_input" />

    <ListView
        android:id="@+id/message_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/debug_dimen_dp_15"
        android:layout_marginEnd="16dp"
        android:divider="@color/debug_white"
        android:dividerHeight="0.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_data" />

</androidx.constraintlayout.widget.ConstraintLayout>